@@ -3790,7 +3790,7 @@ AT_DATA([prog.cob], [
        file-control.
           select optional indexed-file
           assign to "indexed-file.dat"
-          status is indexing-status
+          status is indexing-status indexing-isam-status
           organization is indexed
           access mode is dynamic
           record key is keyfield of indexing-record
@@ -3812,7 +3812,8 @@ AT_DATA([prog.cob], [
           03 data-part         pic x(18).
 
        working-storage section.
-       01 indexing-status.
+       01 indexing-status      pic xx.
+       01 indexing-isam-status.
           03 high-status-code  pic xx.
           03 high-status redefines high-status-code pic 99.
              88 indexing-ok              values 0 thru 10.
@@ -4097,7 +4098,9 @@ AT_DATA([prog.cob], [
            .
 ])
 
-AT_CHECK([$COMPILE prog.cob], [0], [], [])
+AT_CHECK([$COMPILE prog.cob], [0], [],
+[prog.cob:14: warning: VSAM STATUS ignored
+])
 AT_CHECK([$COBCRUN_DIRECT ./prog], [0],
 [Read all 00b02 keys sequentially
 Reading: 00b02
