@@ -1425,6 +1425,105 @@ AT_KEYWORDS([file status])
 AT_DATA([prog.cob], [
        IDENTIFICATION DIVISION.
        PROGRAM-ID. prog.
+
+       ENVIRONMENT DIVISION.
+       INPUT-OUTPUT SECTION.
+       FILE-CONTROL.
+           SELECT f ASSIGN "f.txt" FILE STATUS fs.
+           SELECT g ASSIGN "g.txt" FILE STATUS gs.
+           SELECT h ASSIGN "h.txt" FILE STATUS hs.
+           SELECT j ASSIGN "j.txt" FILE STATUS js.
+           SELECT k ASSIGN "k.txt" FILE STATUS ks.
+           SELECT l ASSIGN "l.txt" FILE STATUS ls.
+           SELECT m ASSIGN "m.txt" FILE STATUS ms.
+           SELECT n ASSIGN "n.txt" FILE STATUS ns.
+           SELECT o ASSIGN "o.txt" FILE STATUS os.
+           SELECT p ASSIGN "p.txt" FILE STATUS ps.
+           SELECT q ASSIGN "q.txt" FILE STATUS non-existent.
+           SELECT r ASSIGN "r.txt" FILE STATUS rs.
+
+       DATA DIVISION.
+       FILE SECTION.
+       FD  f.
+       01  hs    PIC XX.
+       FD  g.
+       01  g-rec PIC X.
+       FD  h.
+       01  h-rec PIC X.
+       FD  j.
+       01  j-rec PIC X.
+       FD  k.
+       01  k-rec PIC X.
+       FD  l.
+       01  l-rec PIC X.
+       FD  m.
+       01  m-rec PIC X.
+       FD  n.
+       01  n-rec PIC X.
+       FD  o.
+       01  o-rec PIC X.
+       FD  p.
+       01  p-rec PIC X.
+       FD  q.
+       01  q-rec PIC X.
+       FD  r.
+       01  r-rec PIC X.
+       
+       WORKING-STORAGE SECTION.
+       *> Valid
+       01  fs          PIC XX.
+
+       LOCAL-STORAGE   SECTION.
+       *> Valid, but warning
+       01  gs          PIC 99.
+
+       *> Invalid
+       01  js          PIC N.
+       01  ks          PIC XX COMP-X.
+       01  ls          PIC V99.
+       01  ms          PIC 99PP.
+       01  ns          PIC XXX.
+       01  x.
+           03  y       PIC 99.
+           03  z       PIC XX OCCURS 1 TO 10 TIMES DEPENDING ON y.
+           03  os      PIC XX.
+               88  ps  VALUE "00".
+           03  z2      PIC XX OCCURS 1 TO 10 TIMES DEPENDING ON y.
+
+       01  rs          CONSTANT "00".
+
+       PROCEDURE DIVISION.
+           CONTINUE
+           .
+       END PROGRAM prog.
+])
+
+AT_CHECK([$COMPILE_ONLY -fodoslide prog.cob], [1], [],
+[prog.cob:57: warning: handling of USAGE NATIONAL is unfinished; implementation is likely to be changed
+prog.cob:18: error: 'non-existent' is not defined
+prog.cob:9: warning: FILE STATUS 'gs' is a numeric field, but I-O status codes are not numeric in general
+prog.cob:10: error: FILE STATUS 'hs' must be in WORKING-STORAGE, LOCAL-STORAGE or LINKAGE
+prog.cob:11: error: FILE STATUS 'js' must be alphanumeric or numeric field
+prog.cob:12: warning: FILE STATUS 'ks' is a numeric field, but I-O status codes are not numeric in general
+prog.cob:12: error: FILE STATUS 'ks' must be USAGE DISPLAY
+prog.cob:13: error: FILE STATUS 'ls' may not be a decimal or have a PIC with a P
+prog.cob:13: warning: FILE STATUS 'ls' is a numeric field, but I-O status codes are not numeric in general
+prog.cob:14: error: FILE STATUS 'ms' may not be a decimal or have a PIC with a P
+prog.cob:14: warning: FILE STATUS 'ms' is a numeric field, but I-O status codes are not numeric in general
+prog.cob:15: error: FILE STATUS 'ns' must be 2 characters long
+prog.cob:16: error: FILE STATUS 'os' may not be located after an OCCURS DEPENDING field
+prog.cob:17: error: FILE STATUS 'ps' must be alphanumeric or numeric field
+prog.cob:19: error: FILE STATUS 'rs' must be alphanumeric or numeric field
+])
+AT_CLEANUP
+
+
+AT_SETUP([VSAM status])
+AT_KEYWORDS([file status extensions])
+
+AT_DATA([prog.cob], [
+       IDENTIFICATION DIVISION.
+       PROGRAM-ID. prog.
        ENVIRONMENT DIVISION.
        INPUT-OUTPUT SECTION.
        FILE-CONTROL.
@@ -1454,15 +1553,7 @@ AT_DATA([prog.cob], [
             STOP RUN.
 ])
 
-AT_CHECK([$COMPILE_ONLY prog.cob], [1], [],
-[prog.cob:16: error: VSAM STATUS does not conform to GnuCOBOL
-])
-
-AT_CHECK([$COMPILE_ONLY -frelax-syntax-checks prog.cob], [0], [],
-[prog.cob:16: warning: VSAM STATUS ignored
-])
-
-AT_CHECK([$COMPILE_ONLY -std=ibm-strict prog.cob], [0], [],
+AT_CHECK([$COMPILE_ONLY prog.cob], [0], [],
 [prog.cob:16: warning: VSAM STATUS ignored
 ])
 
