@@ -1,4 +1,10 @@
 
+2020-07-03  Edward Hart <edwar.dan.hart@gmail.com>
+
+	* parser.y (file_status_clause): only ignore VSAM status, pending proper
+	  config option.
+	* typeck.c: implement syntax rules for FILE STATUS (bug #656).
+
 2020-06-30  Edward Hart <edward.dan.hart@gmail.com>
 
 	* typeck.c (validate_move): refactored.
